[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "langchain-alibabacloud-mysql"
version = "1.0.1"
description = "An integration package connecting AlibabaCloud RDS MySQL (with Vector support) and LangChain"
authors = []
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
    "langchain-core>=1.0.0",
    "mysql-connector-python>=8.0.0",
]

[project.urls]
"Source Code" = "https://github.com/wangkuahai/langchain-alibabacloud-mysql/tree/main/libs/alibabacloud_mysql"
"Release Notes" = "https://github.com/wangkuahai/langchain-alibabacloud-mysql/releases"
Repository = "https://github.com/wangkuahai/langchain-alibabacloud-mysql"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T201"]

[tool.mypy]
disallow_untyped_defs = "True"
[[tool.mypy.overrides]]
module = ["mysql.connector", "mysql.connector.pooling"]
ignore_missing_imports = "True"
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = "True"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
markers = [
    "requires: mark tests as requiring a specific library",
    "asyncio: mark tests as requiring asyncio",
    "compile: mark placeholder test used to compile integration tests without running them",
    "integration: mark tests as integration tests requiring external services",
]
asyncio_mode = "auto"

[dependency-groups]
test = [
    "pytest>=7.3.0",
    "freezegun>=1.2.2",
    "pytest-mock>=3.10.0",
    "syrupy>=4.0.2",
    "pytest-watcher>=0.3.4",
    "pytest-asyncio>=0.21.1",
    "numpy>=1.24.0",
    "langchain-core",
    "langchain-tests>=0.3.5",
]
codespell = [
    "codespell>=2.2.0",
]
test_integration = [
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "dashscope>=1.14.0",
    "langchain-community>=0.2.0",
    "aiomysql>=0.2.0",
]
lint = [
    "ruff>=0.1.5",
]
typing = [
    "mypy>=1.11",
    "types-requests>=2",
    "langchain-core",
]
dev = [
    "langchain-core",
    "numpy>=1.24.0",
]

[tool.uv.sources]
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }
